--- a/www/templates/analytics.html
+++ b/www/templates/analytics.html
@@ -1,3 +1,14 @@
 <ion-view title="Analytics" id="page2">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" class="has-header">
+
+      <fusioncharts
+        id="mychartcontainer"
+        chartid="mychart"
+        width="100%"
+        height="300"
+        type="pie3d"
+        datasource="{{myDataSource}}">
+      </fusioncharts>
+  
+  </ion-content>
 </ion-view>
